--- a/config.yaml
+++ b/config.yaml
@@ -28,3 +28,7 @@ params:
   - id: linkedin
     url: https://de.linkedin.com/company/zero-iee
   author: "ZERO GmbH Team"
+
+  plausibleAnalyticsEnabled: true
+  plausibleAnalyticsDomain: blog.zero-iee.com
+  plausibleAnalyticsScriptUrl: http://analytics.zero-iee.com:8000/js/script.js
